home banner is done

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,5 +13,10 @@
 }
 
 .billboard-video {
-  aspect-ratio: 20/9;
+  aspect-ratio: 10/4;
+}
+
+.youtube-iframe-wrapper iframe {
+  width: 180%;
+  height: 180%;
 }
